--- a/index.html
+++ b/index.html
@@ -1,18 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<title>Examples</title>
+	<style>
+        /* .container { } */
+		.center { text-align: center }
+	</style>
 </head>
+
 <body>
-    <h2>Examples</h2>
-    <ul>
-        <li>
-            async loop
-        </li>
-    </ul>
-    <script src="./examples/async-loop/async-loop.js"></script>
+	<div class="container">
+		<h2>Examples</h2>
+		<ul >
+			<li>
+				Javascript
+				<ul>
+					<li> async loop </li>
+				</ul>
+			</li>
+		</ul>
+	</div>
+	<!-- <script src="./examples/js/async-loop/async-loop.js"></script> -->
 </body>
+
 </html>
